[gd_scene load_steps=2 format=3 uid="uid://cbq8trtq08me0"]

[ext_resource type="Script" path="res://utility/popups/popups.gd" id="1_dsxow"]

[node name="Popups" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_dsxow")

[node name="UI" type="CanvasLayer" parent="."]

[node name="ResourcePopup" type="PopupPanel" parent="UI"]
unique_name_in_owner = true
size = Vector2i(198, 210)
visible = true

[node name="PanelContainer" type="PanelContainer" parent="UI/ResourcePopup"]
offset_left = 4.0
offset_top = 4.0
offset_right = 194.0
offset_bottom = 206.0

[node name="MarginContainer" type="MarginContainer" parent="UI/ResourcePopup/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VB" type="VBoxContainer" parent="UI/ResourcePopup/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="NameLabel" type="Label" parent="UI/ResourcePopup/PanelContainer/MarginContainer/VB"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"HeaderMedium"
text = "Name"

[node name="DescriptionLabel" type="Label" parent="UI/ResourcePopup/PanelContainer/MarginContainer/VB"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 10)
layout_mode = 2
text = "Description"
autowrap_mode = 3
justification_flags = 161

[node name="EffectLabel" type="Label" parent="UI/ResourcePopup/PanelContainer/MarginContainer/VB"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
theme_type_variation = &"ItemQuantity"
text = "boo"
justification_flags = 161
